--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -135,10 +135,12 @@
     <string name="exp_anonymous">از حساب کاربری خود خارج شوید </string>
     <string name="exp_null_doc">مدارک به درستی ارسال نشده است</string>
     <string name="exp_gallery">انتخاب عکس با خطا مواجه شد</string>
+    <string name="exp_gift">کد هدیه معتبر نیست</string>
+    <string name="exp_gift_null">کد هدیه وارد نشده است</string>
 
     <!-- success messages    -->
     <string name="success_code">کد فعالسازی با موفقیت ارسال شد</string>
-
+    <string name="success_gift">کد هدیه با موفقیت اعمال شد</string>
     <string-array name="hour_arrays">
         <item>01</item>
         <item>02</item>
