--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1.5"
                 android:gravity="center"
-                android:text="@string/unsuccessful" />
+                android:text="@string/done" />
 
             <TextView
                 android:id="@+id/tv_scheduled"
