--- a/app/src/main/res/layout/fragment_unsuccessful.xml
+++ b/app/src/main/res/layout/fragment_unsuccessful.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+  <TextView
+      android:id="@+id/tv_alert"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintWidth_percent="0.8"
+      app:layout_constraintHeight_percent="0.1"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:background="@drawable/back_forty_radius_gray">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/unsuccessful_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+  </TextView>
 
-        </androidx.recyclerview.widget.RecyclerView>
-
-    </ScrollView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
