--- a/app/src/main/res/layout/activity_history_detail.xml
+++ b/app/src/main/res/layout/activity_history_detail.xml
@@ -162,7 +162,7 @@
             app:layout_constraintHeight_percent="0.15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="MapView"
+            app:layout_constraintTop_toBottomOf="@id/MapView"
             app:layout_constraintWidth_percent="0.4">
 
             <TextView
