--- a/app/src/main/res/layout/fragment_unsuccessful.xml
+++ b/app/src/main/res/layout/fragment_unsuccessful.xml
@@ -13,8 +13,10 @@
       app:layout_constraintWidth_percent="0.8"
       app:layout_constraintHeight_percent="0.1"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:background="@drawable/back_forty_radius_gray">
+      android:textColor="@color/white"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent">
 
   </TextView>
 
